<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/list_item_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/item_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cus_item_language"
            android:button="@android:color/transparent"
            android:letterSpacing="0.03"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/item_japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/japanese"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:letterSpacing="0.03"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/cus_item_language"/>

        <RadioButton
            android:id="@+id/item_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:letterSpacing="0.03"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/cus_item_language"/>

        <RadioButton
            android:id="@+id/item_korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cus_item_language"
            android:button="@android:color/transparent"
            android:letterSpacing="0.03"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/korean"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/item_vietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cus_item_language"
            android:button="@android:color/transparent"
            android:letterSpacing="0.03"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/vietnamese"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/item_thai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cus_item_language"
            android:button="@android:color/transparent"
            android:letterSpacing="0.03"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/thai"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RadioGroup>
</RelativeLayout>