<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".Create.item_create.Text">
    <RelativeLayout
        android:id="@+id/title_create_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryShrinePink"
        android:paddingTop="30dp"
        android:elevation="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skyBlueLight"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_title_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/btn_back"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/create_text"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>


    <ScrollView
        android:layout_below="@+id/title_create_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/container_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cus_btn_create"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/message_text"
                    android:textSize="16sp"
                    android:textColor="@color/brown"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/cus_edt_text"
                    android:hint="@string/Add_a_text"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="@color/text_color_1" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_wifi"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/cus_create"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:stateListAnimator="@null"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/brown"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>